--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,32 @@
-mp.messaging.incoming.words-in.topic=words
-mp.messaging.outgoing.words-out.topic=words
-mp.messaging.incoming.words-in.auto.offset.reset=earliest
+quarkus.datasource.password=root
+quarkus.datasource.username=root
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/postgres
+%prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://postgres/postgres
+quarkus.datasource.jdbc.driver=org.postgresql.Driver
+quarkus.datasource.db-kind=postgresql
+quarkus.http.port=8081
+
+quarkus.kubernetes.readiness-probe.initial-delay=10
+quarkus.kubernetes.readiness-probe.period=2
+quarkus.kubernetes.readiness-probe.timeout=5
+
+quarkus.kubernetes.liveness-probe.initial-delay=10
+quarkus.kubernetes.liveness-probe.period=2
+quarkus.kubernetes.liveness-probe.timeout=5
+quarkus.kubernetes.namespace=loan
+quarkus.kubernetes.node-port=30501
+
+%prod.quarkus.kubernetes-config.enabled=true
+%prod.quarkus.kubernetes-config.secrets.enabled=true
+%prod.quarkus.kubernetes-config.secrets=db-credentials
+%prod.quarkus.datasource.username=${username}
+%prod.quarkus.datasource.password=${password}
+
+%prod.kafka.bootstrap.servers=kafka:9092
+
+kafka.bootstrap.servers=localhost:9092
+mp.messaging.incoming.commission-service.connector=smallrye-kafka
+mp.messaging.incoming.commission-service.topic=commission
+mp.messaging.incoming.commission-service.value.deserializer=com.github.fabriciolfj.providers.kafka.deserializer.ContractCommissionDTODeserializer
+mp.messaging.incoming.commission-service.auto.offset.reset=earliest
