ajuste na implementacao

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,7 @@ mp.messaging.incoming.commission-service.connector=smallrye-kafka
 mp.messaging.incoming.commission-service.topic=commission
 mp.messaging.incoming.commission-service.value.deserializer=com.github.fabriciolfj.providers.kafka.deserializer.ContractCommissionDTODeserializer
 mp.messaging.incoming.commission-service.auto.offset.reset=earliest
+
+percentage.min=5
+percentage.medium=7
+percentage.max=9
